--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -5,10 +5,6 @@
 @import './fonts.css';
 
 @import './frame.less';
-@import './table.less';
-@import './modal.less';
-@import './input.less';
-@import './select.less';
 @import './clearfix.less';
-
+@import './ellipsis.less';
 
