--- a/src/assets/css/var.less
+++ b/src/assets/css/var.less
@@ -9,32 +9,14 @@
 @gray-color-normal: #cccccc;
 @gray-color-elip: #eeeeee;
 
-// switch
-@switch-border-color: @gray-color-normal;
-@switch-color:#888888;
+// @white
+@white-color-light: #f7f7f7;
 
 // 菜单颜色变量
 @menu-border-color: #e2e2e2;
 @menu-bg-color: #f7f8f9;
+@menu-hover-color: rgba(15,208,132,.1); 
 @menu-title-color: @gray-color-medium;
 @menu-color: #fff;
 
-// 表格颜色变量@table
-@table-header-color: @gray-color-light; 
-@table-body-color: #262626;  
-@table-bg-color: #f2f3f4; 
 
-// 描述性文字
-@title-color:#262626;
-@caption-color:@gray-color-light;
-
-// 弹层
-@modal-border-color: #f7f7f7;
-@modal-confirm-color: @gray-color-medium;
-@modal-inner-color: #333333;
-
-// 输入框
-@input-color: @gray-color-medium;
-@input-border-color:#e6e6e6;
-@input-disabled-color:#f5f5f5;
-@label-color: @gray-color-light;
