--- a/src/assets/css/var.less
+++ b/src/assets/css/var.less
@@ -10,7 +10,10 @@
 @gray-color-elip: #eeeeee;
 
 // @white
+@white-color: #ffffff;
+@white-color-lighter: #f5f5f5;
 @white-color-light: #f7f7f7;
+
 
 // 菜单颜色变量
 @menu-border-color: #e2e2e2;
@@ -20,3 +23,6 @@
 @menu-color: #fff;
 
 
+// 收藏点赞颜色变量
+@like-color: #F66F66;
+@collect-color: #ffdb66;
