--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -6,5 +6,7 @@
 
 @import './frame.less';
 @import './clearfix.less';
+@import './cursor.less';
+@import './float.less';
 @import './ellipsis.less';
 
