--- a/src/assets/css/var.less
+++ b/src/assets/css/var.less
@@ -1,6 +1,8 @@
-@primary-color: #31d99b; 
+@primary-color: #18d085; 
+@border-color-base: #ededed; // 重置iview border color
+@text-color: #333333;  // 重置iview text color
+@btn-disable-color: #cccccc;
 @error-color: #fd838a; 
-@disabled-color: #cccccc; 
 
 // @gray
 @gray-color-light: #999999;
@@ -11,18 +13,21 @@
 
 // @white
 @white-color: #ffffff;
-@white-color-lighter: #f5f5f5;
-@white-color-light: #f7f7f7;
-
+@white-color-light: #f8f8f8;
+@white-color-dark: #f1f0f0;
 
 // 菜单颜色变量
 @menu-border-color: #e2e2e2;
 @menu-bg-color: #f7f8f9;
-@menu-hover-color: rgba(15,208,132,.1); 
+@menu-hover-bg-color: rgba(15,208,132,.1); 
 @menu-title-color: @gray-color-medium;
-@menu-color: #fff;
+@menu-hover-color: @white-color;
 
 
 // 收藏点赞颜色变量
 @like-color: #F66F66;
 @collect-color: #ffdb66;
+
+// 边框颜色
+@border-color: #ededed;
+
