--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -12,3 +12,12 @@
 @import './face.less';
 
 @import './picker.less';
+
+.logger-statistics {
+    padding: 0 20px;
+    width: 100%;
+    height: 100%;
+    .logger-statistics-content {
+        height: 100%;
+    }
+}
