--- a/src/assets/css/picker.less
+++ b/src/assets/css/picker.less
@@ -1,13 +1,13 @@
 .picker {
 	width: 180px;
-	height: 38px;
-	padding: 0 30px;
+	height: 58px;
+	padding: 10px 30px;
 	line-height: 38px;
 	color: @gray-color-dark;
 	position: relative;
 	text-align: center;
 	font-size: 16px;
-	margin: 10px auto 10px;
+	margin: 0 auto;
 	::selection {
 		background-color: transparent;
 	}
