--- a/src/assets/css/var.less
+++ b/src/assets/css/var.less
@@ -35,3 +35,8 @@
 
 // box-shadow
 @box-shadow: rgba(0,0,0,.1);
+
+// 模板
+@drag-border-color: #f8ce7c;
+@drag-bg-color: rgba(255,241,81,.2);
+@drag-close-color: #FF6E6E;
