--- a/src/assets/css/var.less
+++ b/src/assets/css/var.less
@@ -2,7 +2,7 @@
 @border-color-base: #ededed; // 重置iview border color
 @text-color: #333333;  // 重置iview text color
 @btn-disable-color: #cccccc;
-@error-color: #fd838a; 
+@error-color: #fd4d4d; 
 
 // @gray
 @gray-color-light: #999999;
