--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'icomoon';
-  src: url('fonts/icomoon.eot?lxnopn');
-  src: url('fonts/icomoon.eot?lxnopn#iefix') format('embedded-opentype'), url('fonts/icomoon.ttf?lxnopn') format('truetype'), url('fonts/icomoon.woff?lxnopn') format('woff'), url('fonts/icomoon.svg?lxnopn#icomoon') format('svg');
+  src: url('fonts/icomoon.eot?ojyqum');
+  src: url('fonts/icomoon.eot?ojyqum#iefix') format('embedded-opentype'), url('fonts/icomoon.ttf?ojyqum') format('truetype'), url('fonts/icomoon.woff?ojyqum') format('woff'), url('fonts/icomoon.svg?ojyqum#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -19,6 +19,34 @@
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-control-checkbox:before {
+  content: "\e90c";
+}
+
+.icon-control-date:before {
+  content: "\e923";
+}
+
+.icon-control-radiobutton:before {
+  content: "\e924";
+}
+
+.icon-control-text:before {
+  content: "\e925";
+}
+
+.icon-control-textfield:before {
+  content: "\e926";
+}
+
+.icon-enclosure:before {
+  content: "\e927";
+}
+
+.icon-expression:before {
+  content: "\e928";
 }
 
 .icon-add-big:before {
@@ -133,7 +161,7 @@
   content: "\e91c";
 }
 
-.icon-none-user:before {
+.icon-non-user:before {
   content: "\e91d";
 }
 
