--- a/src/assets/css/var.less
+++ b/src/assets/css/var.less
@@ -15,6 +15,7 @@
 @white-color: #ffffff;
 @white-color-light: #f8f8f8;
 @white-color-dark: #f1f0f0;
+@white-color-elip: #f0f4f6;
 
 // 菜单颜色变量
 @menu-border-color: #e2e2e2;
