--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -18,3 +18,15 @@
     width: 100%;
     height: 100%;
 }
+
+.ivu-modal-confirm {
+    .ivu-icon-help-circled {
+        color: #ffc000;
+        &:before {
+            content: "\F35B"
+        }
+    }
+    .ivu-btn-text {
+        border: 1px solid @border-color-base;
+    }
+}
