--- a/src/template/index.html
+++ b/src/template/index.html
@@ -5,7 +5,7 @@
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta content="yes" name="apple-touch-fullscreen">
     <meta content="telephone=no,email=no" name="format-detection">
-    <title>新版-日志</title>
+    <title>日志</title>
 </head>
 <body>
     <div id="app">
