--- a/src/assets/css/var.less
+++ b/src/assets/css/var.less
@@ -1,14 +1,16 @@
-@primary-color: #18d085; 
+@primary-color: #E14C46;
 @border-color-base: #ededed; // 重置iview border color
-@text-color: #333333;  // 重置iview text color
-@btn-disable-color: #cccccc;
+@text-color: #111;  // 重置iview text color
+@btn-disable-color: #888;
 @error-color: #fd4d4d; 
+@input-select-border-color: #00CDC3;
+@select-item-bg: #e4e4e4;
 
 // @gray
-@gray-color-light: #999999;
-@gray-color-medium: #666666;
-@gray-color-dark: #333333;
-@gray-color-normal: #cccccc;
+@gray-color-light: #888;
+@gray-color-medium: #555;
+@gray-color-dark: #111;
+@gray-color-normal: #888;
 @gray-color-elip: #eeeeee;
 
 // @white
@@ -20,9 +22,9 @@
 // 菜单颜色变量
 @menu-border-color: #e2e2e2;
 @menu-bg-color: #f7f8f9;
-@menu-hover-bg-color: #f8f8f8; 
+@menu-hover-bg-color: #f3f3f3; 
 @menu-title-color: @gray-color-medium;
-@menu-hover-color: rgba(248,248,248, .7);
+@menu-hover-color: #fff;
 
 
 // 收藏点赞颜色变量
