--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -1,7 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src: url('fonts/icomoon.eot?ojyqum');
-  src: url('fonts/icomoon.eot?ojyqum#iefix') format('embedded-opentype'), url('fonts/icomoon.ttf?ojyqum') format('truetype'), url('fonts/icomoon.woff?ojyqum') format('woff'), url('fonts/icomoon.svg?ojyqum#icomoon') format('svg');
+  src: url('fonts/icomoon.eot?shag2g');
+  src: url('fonts/icomoon.eot?shag2g#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?shag2g') format('truetype'),
+    url('fonts/icomoon.woff?shag2g') format('woff'),
+    url('fonts/icomoon.svg?shag2g#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -19,6 +22,10 @@
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-content:before {
+  content: "\e92f";
 }
 
 .icon-collect-2018:before {
