--- a/src/assets/css/var.less
+++ b/src/assets/css/var.less
@@ -3,7 +3,7 @@
 @text-color: #111;  // 重置iview text color
 @btn-disable-color: #888;
 @error-color: #fd4d4d; 
-@input-select-border-color: #00CDC3;
+@input-select-border-color: #fd4d4d;
 @select-item-bg: #e4e4e4;
 
 // @gray
@@ -15,6 +15,7 @@
 
 // @white
 @white-color: #ffffff;
+@white-color-title: #f5f5f5;
 @white-color-light: #f8f8f8;
 @white-color-dark: #f1f0f0;
 @white-color-elip: #f0f4f6;
@@ -33,6 +34,7 @@
 
 // 边框颜色
 @border-color: #ededed;
+@border-color-dark: #d0d0d0;
 
 @orange-color:rgb(255, 181, 94);
 
