任务日程转日志

--- a/src/assets/css/var.less
+++ b/src/assets/css/var.less
@@ -10,6 +10,7 @@
 @gray-color-light: #888;
 @gray-color-medium: #555;
 @gray-color-dark: #111;
+@gray-color-simple: #666;
 @gray-color-normal: #888;
 @gray-color-elip: #eeeeee;
 
