配置页面编写

--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -24,6 +24,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-manage:before {
+  content: "\e930";
+}
+
 .icon-content:before {
   content: "\e92f";
 }
