选人组件调整

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -4,7 +4,7 @@
 @import './reset.less';
 @import './fonts.css';
 
-@import './frame.less';
+@import './search-form.less';
 @import './clearfix.less';
 @import './cursor.less';
 @import './float.less';
