--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -42,3 +42,21 @@
     border-color: @input-select-border-color;
     box-shadow: unset;
 }
+
+.ivu-btn {
+    padding: 4px 15px;
+    &.ivu-btn-default {
+        background-color: @select-item-bg;
+        color: @gray-color-medium;
+        &:hover {
+            border-color: @select-item-bg;
+        }
+        &:focus {
+            box-shadow: none;
+        }
+    }
+}
+
+.ivu-tabs-nav .ivu-tabs-tab:hover {
+    color: @primary-color;
+}
