--- a/src/assets/css/var.less
+++ b/src/assets/css/var.less
@@ -1,5 +1,5 @@
 @primary-color: #E14C46;
-@border-color-base: #ededed; // 重置iview border color
+@border-color-base: #ddd; // 重置iview border color
 @text-color: #111;  // 重置iview text color
 @btn-disable-color: #888;
 @error-color: #fd4d4d; 
@@ -34,8 +34,8 @@
 @collect-color: #ffdb66;
 
 // 边框颜色
-@border-color: #ededed;
-@border-color-dark: #d0d0d0;
+@border-color: #ddd;
+@border-color-dark: #ddd;
 
 @orange-color:rgb(255, 181, 94);
 
