--- a/src/assets/css/var.less
+++ b/src/assets/css/var.less
@@ -3,8 +3,13 @@
 @text-color: #111;  // 重置iview text color
 @btn-disable-color: #888;
 @error-color: #fd4d4d; 
-@input-select-border-color: #fd4d4d;
+@input-select-border-color: @border-color-base;
 @select-item-bg: #e4e4e4;
+
+@min-screnn-width: 1200px;
+@min-container-width: 1050px;
+@max-menu-width: 200px;
+@min-menu-width: 150px;
 
 // @gray
 @gray-color-light: #888;
@@ -18,7 +23,7 @@
 @white-color: #ffffff;
 @white-color-title: #f5f5f5;
 @white-color-light: #f8f8f8;
-@white-color-dark: #f1f0f0;
+@white-color-dark: #f2f2f2;
 @white-color-elip: #f0f4f6;
 
 // 菜单颜色变量
