--- a/src/assets/css/var.less
+++ b/src/assets/css/var.less
@@ -1,8 +1,8 @@
-@primary-color: #E14C46;
+@primary-color: #EE2223;
 @border-color-base: #ddd; // 重置iview border color
 @text-color: #111;  // 重置iview text color
 @btn-disable-color: #888;
-@error-color: #fd4d4d; 
+@error-color: #EE2223; 
 @input-select-border-color: @border-color-base;
 @select-item-bg: #e4e4e4;
 
