--- a/src/template/index.html
+++ b/src/template/index.html
@@ -10,6 +10,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <title>工作汇报</title>
+    <script src="<%= htmlWebpackPlugin.options.phpHost %>/contextVar/getJsVar?v=1&qzid=0" type="text/javascript"></script>
 </head>
 <body>
     <div id="app">
