--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -1,16 +1,16 @@
 @font-face {
   font-family: 'icomoon';
-  src: url('fonts/icomoon.eot?shag2g');
-  src: url('fonts/icomoon.eot?shag2g#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?shag2g') format('truetype'),
-    url('fonts/icomoon.woff?shag2g') format('woff'),
-    url('fonts/icomoon.svg?shag2g#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?aljhdf');
+  src:  url('fonts/icomoon.eot?aljhdf#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?aljhdf') format('truetype'),
+    url('fonts/icomoon.woff?aljhdf') format('woff'),
+    url('fonts/icomoon.svg?aljhdf#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
+  font-display: block;
 }
 
-[class^="icon-"],
-[class*=" icon-"] {
+[class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
   speak: none;
@@ -19,203 +19,160 @@
   font-variant: normal;
   text-transform: none;
   line-height: 1;
+
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-manage:before {
-  content: "\e930";
-}
-
-.icon-content:before {
-  content: "\e92f";
-}
-
-.icon-collect-2018:before {
-  content: "\e929";
-}
-
-.icon-collect-normal-2018:before {
-  content: "\e92a";
-}
-
-.icon-draft-2018:before {
-  content: "\e92b";
-}
-
-.icon-search-2018:before {
-  content: "\e92c";
-}
-
-.icon-statistics-2018:before {
-  content: "\e92d";
-}
-
-.icon-template-2018:before {
-  content: "\e92e";
-}
-
-.icon-control-checkbox:before {
-  content: "\e90c";
-}
-
-.icon-control-date:before {
-  content: "\e923";
-}
-
-.icon-control-radiobutton:before {
-  content: "\e924";
-}
-
-.icon-control-text:before {
-  content: "\e925";
-}
-
-.icon-control-textfield:before {
-  content: "\e926";
-}
-
-.icon-enclosure:before {
-  content: "\e927";
-}
-
-.icon-expression:before {
-  content: "\e928";
-}
-
-.icon-add-big:before {
+.icon-customized:before {
   content: "\e900";
+  color: #999;
 }
-
-.icon-add-template:before {
+.icon-add-big:before {
   content: "\e901";
 }
-
-.icon-add:before {
+.icon-add-template:before {
   content: "\e902";
 }
-
-.icon-arrow-down:before {
+.icon-add:before {
   content: "\e903";
 }
-
-.icon-arrow-left:before {
+.icon-arrow-down:before {
   content: "\e904";
 }
-
-.icon-arrow-right:before {
+.icon-arrow-left:before {
   content: "\e905";
 }
-
-.icon-arrow-up:before {
+.icon-arrow-right:before {
   content: "\e906";
 }
-
-.icon-chat-normal:before {
+.icon-arrow-up:before {
   content: "\e907";
 }
-
-.icon-chat-selected:before {
+.icon-chat-normal:before {
   content: "\e908";
 }
-
-.icon-check:before {
+.icon-chat-selected:before {
   content: "\e909";
 }
-
-.icon-collect-normal:before {
+.icon-check:before {
   content: "\e90a";
 }
-
-.icon-collect-selected:before {
+.icon-collect-normal:before {
   content: "\e90b";
 }
-
-.icon-collect:before {
+.icon-collect-selected:before {
+  content: "\e90c";
+}
+.icon-control-checkbox:before {
   content: "\e90d";
 }
-
-.icon-delete-userlist:before {
+.icon-collect:before {
   content: "\e90e";
 }
-
-.icon-delete:before {
+.icon-delete-userlist:before {
   content: "\e90f";
 }
-
-.icon-department:before {
+.icon-delete:before {
   content: "\e910";
 }
-
-.icon-details:before {
+.icon-department:before {
   content: "\e911";
 }
-
-.icon-draft:before {
+.icon-details:before {
   content: "\e912";
 }
-
-.icon-edit:before {
+.icon-draft:before {
   content: "\e913";
 }
-
-.icon-fullarrow-down:before {
+.icon-edit:before {
   content: "\e914";
 }
-
-.icon-fullarrow-left:before {
+.icon-fullarrow-down:before {
   content: "\e915";
 }
-
-.icon-fullarrow-right:before {
+.icon-fullarrow-left:before {
   content: "\e916";
 }
-
-.icon-fullarrow-up:before {
+.icon-fullarrow-right:before {
   content: "\e917";
 }
-
-.icon-good-normal:before {
+.icon-fullarrow-up:before {
   content: "\e918";
 }
-
-.icon-good-selected:before {
+.icon-good-normal:before {
   content: "\e919";
 }
-
-.icon-more:before {
+.icon-good-selected:before {
   content: "\e91a";
 }
-
-.icon-none-department:before {
+.icon-more:before {
   content: "\e91b";
 }
-
-.icon-none-team:before {
+.icon-none-department:before {
   content: "\e91c";
 }
-
-.icon-none-user:before {
+.icon-none-team:before {
   content: "\e91d";
 }
-
-.icon-play:before {
+.icon-non-user:before {
   content: "\e91e";
 }
-
-.icon-search:before {
+.icon-play:before {
   content: "\e91f";
 }
-
-.icon-statistics:before {
+.icon-search:before {
   content: "\e920";
 }
-
-.icon-stop:before {
+.icon-statistics:before {
   content: "\e921";
 }
-
-.icon-template:before {
+.icon-stop:before {
   content: "\e922";
+}
+.icon-template:before {
+  content: "\e923";
+}
+.icon-control-date:before {
+  content: "\e924";
+}
+.icon-control-radiobutton:before {
+  content: "\e925";
+}
+.icon-control-text:before {
+  content: "\e926";
+}
+.icon-control-textfield:before {
+  content: "\e927";
+}
+.icon-enclosure:before {
+  content: "\e928";
+}
+.icon-expression:before {
+  content: "\e929";
+}
+.icon-collect-2018:before {
+  content: "\e92a";
+}
+.icon-collect-normal-2018:before {
+  content: "\e92b";
+}
+.icon-draft-2018:before {
+  content: "\e92c";
+}
+.icon-search-2018:before {
+  content: "\e92d";
+}
+.icon-statistics-2018:before {
+  content: "\e92e";
+}
+.icon-template-2018:before {
+  content: "\e92f";
+}
+.icon-content:before {
+  content: "\e930";
+}
+.icon-manage:before {
+  content: "\e931";
 }
