2020-03-12 16:57  .ivu-form-item-content

--- a/src/assets/css/search-form.less
+++ b/src/assets/css/search-form.less
@@ -20,7 +20,8 @@
             color: @gray-color-light;
         }
         .ivu-form-item-content {
-            line-height: 28px;
+            line-height: 32px;
+            height: 32px;
         }
         &.search-btn {
             position: absolute;
