--- a/src/assets/css/reset.less
+++ b/src/assets/css/reset.less
@@ -59,7 +59,7 @@ body,
 #app {
 	width: 100%;
 	height: 100%;
-	font-family: PingFangSC-Regular, PingFang SC, "Microsoft Yahei", HiraginoSansGB-W3, "Helvetica Neue", Helvetica, STHeiTi, sans-serif;
+	font-family: 'PingFang SC', 'Helvetica', 'NotoSans', 'Roboto', 'Tahoma', 'Hiragino Sans GB', 'Arial', 'Microsoft YaHei', 'Sans-serif';
 }
 
 body {
